# enterprise-auth-service

./: .env.development  .env.example  .env.production.example  .env.testing  .gitignore  Dockerfile  LICENSE  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
architecture/: DATABASE_DESIGN.md  README.md  SECURITY_ARCHITECTURE.md  SYSTEM_DESIGN.md
deployment/: README.md
docker/: README.md
docs/: API_DOCUMENTATION.md  ARCHITECTURE_DECISIONS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  README.md  SETUP_GUIDE.md
planning/: DELIVERY.md  FOUNDATION.md  STRUCTURE.md
postman/: README.md
scripts/: README.md  format.sh  lint.sh  run.sh  setup.sh  test.sh
src/: README.md
src/apps/accounts/: admin.py  managers.py  models.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/api/: apps.py  exceptions.py  pagination.py  permissions.py  responses.py  serializers.py  urls.py  versioning.py  views.py
src/apps/authentication/: apps.py  models.py  permissions.py  serializers.py  serializers_passwords.py  services.py  services_passwords.py  tokens.py  urls.py  urls_passwords.py  utils.py  validators.py  views.py  views_passwords.py
src/apps/authentication/migrations/: 0001_passwordresettoken.py  __init__.py
src/apps/common/models/: __init__.py  base.py  soft_delete.py  timestamp.py  uuid.py
src/config/: __init__.py  asgi.py  urls.py  wsgi.py
src/config/settings/: base.py  development.py  production.py  testing.py
tests/: README.md  test_password_management.py
