[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-auth-service"
version = "0.1.0"
description = "Production-ready Authentication & User Management API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Enterprise Auth Team" }]
requires-python = ">=3.13"
keywords = ["auth", "django", "rest-api", "authentication", "jwt", "oauth2"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
]

# Production dependencies
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.14",
    "django-environ>=0.21.0",
    "psycopg[binary]>=3.1.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "gunicorn>=21.0.0",
    "sentry-sdk>=1.38.0",
    "prometheus-client>=0.18.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "black[jupyter]==24.4.2",
    "isort==5.13.2",
    "ruff==0.4.1",
    "mypy==1.11.0",
    "django-stubs>=4.2.0",
    "djangorestframework-stubs>=3.14.0",
    "types-redis>=4.6.0",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.20",
    "types-pytz>=2024.1.0.20240417",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-django>=4.5.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
]

# Documentation dependencies
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[tool.uv]
# Latest Python version to install
python-version = "3.13"

[tool.uv.sources]
# Add any private package indices here if needed

[tool.ruff]
# Target Python 3.13
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Enable all rule categories
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E", "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-simplify
    "SIM",
    # flake8-use-pathlib
    "PTH",
    # Security
    "S",
    # Type checking
    "TCH",
    # Docstring
    "D",
    # Pandas
    "PD",
    # Numpy
    "NPY",
    # Ruff-specific
    "RUF",
    # Complexity
    "C901",
    # Logging
    "LOG",
    # Print statements
    "T20",
    # Unused variables
    "F841",
]

# Ignore specific rules
ignore = [
    # Line too long (handled by formatter)
    "E501",
    # Line break before binary operator (W503, D203 deprecated)
    "W503",
    # Missing docstrings (too strict for now)
    "D100", "D104", "D105",
    # Docstring one-liner format
    "D200",
    # Unused imports may be intentional
    "F401",
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
# Test files don't need docstrings
"tests/**" = ["D100", "D101", "D102", "D103"]
# Migration files
"*/migrations/*.py" = ["D100", "D101"]
# __init__ files
"*/__init__.py" = ["D104", "F401"]
# Settings files
"*/settings*.py" = ["F405"]

[tool.ruff.lint.isort]
# isort configuration integrated with ruff
known-first-party = ["src"]
known-third-party = ["django", "rest_framework", "celery", "redis"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-single-line = false
multi-line-mode = 3
use-parentheses = true
ensure-newline-before-comments = true
include-trailing-comma = true

[tool.ruff.format]
# Code formatting options
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
# Strict type checking mode
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_no_return = true
warn_unreachable = true
pretty = true

# Ignore third-party packages that don't have type stubs
[[tool.mypy.overrides]]
module = [
    "django.*",
    "rest_framework.*",
    "celery.*",
    "redis.*",
    "environ",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
# pytest configuration
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage options
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]

# Markers for test categorization
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "slow: slow tests",
    "celery: celery task tests",
    "database: tests requiring database",
    "async: async tests",
]

# Async support
asyncio_mode = "auto"

# Django configuration
DJANGO_SETTINGS_MODULE = "src.settings"

[tool.coverage.run]
# Coverage configuration
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "*/settings*.py",
    "*/manage.py",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
# Coverage reporting
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
# Black formatter configuration
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
# isort configuration (backup to ruff isort settings)
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_glob = ["*/migrations/*", "*/venv/*"]
known_first_party = ["src"]
known_third_party = ["django", "rest_framework"]
