[build-system]
requires=["hatchling>=1.27"]
build-backend="hatchling.build"

[project]
name="enterprise-auth-service"
version="0.1.0"
description="Production-ready Authentication & User Management API"
readme="README.md"
requires-python=">=3.13"
license={text="MIT"}
authors=[{name="Enterprise Auth Team"}]

dependencies=[
  "django>=5.2,<6.0",
  "djangorestframework>=3.16",
  "django-environ>=0.12",
  "python-dotenv>=1.1",
  "psycopg[binary]>=3.2",
  "whitenoise>=6.9",
]

[dependency-groups]
dev=[
 "ruff>=0.12",
 "mypy>=1.16",
 "django-stubs>=5.2",
 "djangorestframework-stubs>=3.16",
 "pre-commit>=4.2",
 "ipython>=9.0",
]
test=[
 "pytest>=8.4",
 "pytest-django>=4.11",
 "pytest-cov>=6.2",
 "factory-boy>=3.3",
 "faker>=37.0",
]

[tool.ruff]
target-version="py313"
line-length=100

[tool.ruff.lint]
select=["E","F","W","I","UP","B","SIM","C4","RUF"]
ignore=["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103"]
"*/migrations/*.py" = ["D100", "D101"]
"*/__init__.py" = ["F401"]
"*/settings/*.py" = ["F403", "F405"]
"*/settings.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style="double"

[tool.mypy]
python_version="3.13"
strict=true
warn_unused_configs=true
warn_unused_ignores=true
check_untyped_defs=true

[[tool.mypy.overrides]]
module=["django.*","rest_framework.*","environ"]
ignore_missing_imports=true

[tool.pytest.ini_options]
minversion="8.0"
testpaths=["tests"]
python_files=["test_*.py","*_test.py"]
addopts="-ra --strict-markers"

[tool.coverage.run]
branch=true
source=["src"]
omit=["*/migrations/*","*/tests/*","*/__init__.py"]

[tool.hatch.build.targets.wheel]
source = "src"
packages = ["config"]
